--- a/css/style.css
+++ b/css/style.css
@@ -412,17 +412,8 @@ h1, h2, h3, h4, h5, h6 {
             flex-direction: column-reverse;
     margin-bottom: 16px;
   }
-  .navigation-list-app li:nth-child(1) {
-    padding-left: 25px;
-  }
-  .navigation-list-app li:nth-child(2) {
-    padding-left: 25px;
-  }
-  .navigation-list-app li:nth-child(3) {
-    padding-left: 23px;
-  }
-  .navigation-list-app li:nth-child(4) {
-    padding-left: 22px;
+  .navigation-list-app li {
+    padding: 15px 22px;
   }
   .navigation-list-app li:nth-child(1) a {
     padding-left: 12px;
