--- a/#source/scss/_Header.scss
+++ b/#source/scss/_Header.scss
@@ -13,7 +13,7 @@
 
 			z-index: 99;
 			background-color: #070033;
-			;
+
 			width: 18px;
 			height: 2px;
 			margin: 4px 0;
@@ -56,20 +56,17 @@
 		font-weight: 400;
 		font-size: 16px;
 		line-height: 150%;
-
+		transition: all 0.2s ease;
 
 
 
 		li {
 			margin-right: 46px;
+			transition: all 0.2s ease;
 
-			&:hover {
-				a {
-					position: relative;
-					// box-shadow: 0px 0px 10px 5px rgba(23, 73, 179, 0.49);
-					// background-color: rgba(23, 73, 179, .38);
-					// border-radius: 50%;
-				}
+			&:hover a,
+			&:focus a {
+				color: #1749B3;
 			}
 
 
@@ -86,6 +83,7 @@
 			line-height: 150%;
 			color: #333333;
 			text-decoration: none;
+			transition: all 0.2s ease;
 
 			img {
 				margin-top: 2px;
@@ -96,10 +94,12 @@
 				align-items: center;
 				gap: 10px;
 			}
-		}
 
-		&:last-child {
-			margin-right: 0;
+
+
+			&:last-child {
+				margin-right: 0;
+			}
 		}
 	}
 }
@@ -144,13 +144,219 @@
 		line-height: 150%;
 		display: flex;
 		align-items: center;
-		gap: 2px;
+		gap: 5px;
 
 		img {
 			margin-top: 1px;
 		}
 	}
 }
+
+// sssssssssssssssssssssssssss
+
+
+.dropdown-case {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdownBtn {
+	font-family: 'Gotham Pro';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 150%;
+	display: flex;
+	align-items: center;
+
+	position: relative;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 48%;
+		// transform: translateY(-50%);
+		right: -15px;
+		height: 3.89px;
+		width: 6.86px;
+		background: url('/img/arrow-down-s-line.svg') no-repeat;
+	}
+
+	cursor: pointer;
+	background: #FFFFFF;
+	border: none;
+
+
+	margin-right: 46px;
+
+	&:hover,
+	&:focus {
+		color: #1749B3;
+
+
+	}
+
+	&:focus {
+		&::after {
+			content: '';
+			transform-origin: 50% 50% 0px;
+			transform: rotateX(180deg);
+		}
+
+	}
+
+
+}
+
+.dropdownList {
+	display: none;
+
+	position: absolute;
+	top: 50px;
+	left: -30px;
+	z-index: 2;
+	background: #ffffff;
+
+	box-shadow: 0px 20px 48px rgba(177, 177, 177, 0.4);
+	border-radius: 16px;
+	padding: 25px;
+	min-width: 215px;
+	transition: all 0.2s ease;
+
+	a {
+		font-weight: 400;
+		font-size: 17px;
+		line-height: 150%;
+		display: block;
+		margin-bottom: 20px;
+		transition: all 0.2s ease;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+
+		&:hover,
+		&:focus {
+			transition: all 0.2s ease;
+			color: #1749B3;
+		}
+	}
+
+
+}
+
+// ---------------------------
+.SpoilerLanguges-case {
+	position: relative;
+	display: inline-block;
+}
+
+.FunctionsHeader {
+
+	&__SpoilerLanguges {
+		background: #fff;
+	}
+}
+
+.SpoilerLanguges-btn {
+	text-transform: uppercase;
+	cursor: pointer;
+	background: #FFFFFF;
+	border: none;
+	position: relative;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 42%;
+		// transform: translateY(-50%);
+		right: -15px;
+		height: 3.89px;
+		width: 6.86px;
+		background: url('/img/arrow-down-s-line.svg') no-repeat;
+	}
+
+	&:hover,
+	&:focus {
+		color: #1749B3;
+
+
+	}
+
+	&:focus {
+		&::after {
+			content: '';
+			transform-origin: 50% 50% 0px;
+			transform: rotateX(180deg);
+		}
+
+	}
+}
+
+.SpoilerLangugesList {
+	display: none;
+
+	position: absolute;
+	top: 50px;
+	left: 35px;
+	z-index: 2;
+	background: #ffffff;
+
+	box-shadow: 0px 20px 48px rgba(177, 177, 177, 0.4);
+	border-radius: 16px;
+	padding: 25px;
+
+	transition: all 0.2s ease;
+
+	a {
+		font-weight: 400;
+		font-size: 17px;
+		line-height: 150%;
+		display: block;
+		margin-bottom: 20px;
+		transition: all 0.2s ease;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+
+		&:hover,
+		&:focus {
+			transition: all 0.2s ease;
+			color: #1749B3;
+		}
+	}
+
+	option {
+		font-weight: 400;
+		font-size: 17px;
+		line-height: 150%;
+		display: block;
+		margin-bottom: 20px;
+
+		transition: all 0.2s ease;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+
+.FunctionsHeader {
+
+	&__SpoilerLanguges {}
+}
+
+.change-lang {
+	cursor: pointer;
+
+	// padding: 25px;
+	select {
+		// padding: 25px;
+	}
+}
+
+// sssssssssssssssssssssssssss
 
 @media (max-width: $desktop) {
 	.header__list li {
@@ -171,6 +377,10 @@
 		h2 {
 			display: none;
 		}
+	}
+
+	.dropdownBtn {
+		margin-right: 25px;
 	}
 }
 
@@ -300,8 +510,8 @@
 		margin-bottom: 16px;
 
 		li {
-				padding: 15px 22px;
-			}
+			padding: 15px 22px;
+		}
 
 		// li {
 		// 	&:nth-child(1) {
@@ -389,7 +599,7 @@
 
 
 	.services-list-app {
-		
+
 		margin-bottom: 50px;
 
 		li {
@@ -438,9 +648,11 @@
 		font-weight: 500;
 	}
 
+	.dropdownBtn {
+		margin-right: 0;
+	}
+
 }
-
-
 
 
 @media (max-width: $mobile) {
