--- a/#source/scss/_Header.scss
+++ b/#source/scss/_Header.scss
@@ -254,14 +254,14 @@
 .FunctionsHeader {
 
 	&__SpoilerLanguges {
-		background: #fff;
+		background: none;
 	}
 }
 
 .SpoilerLanguges-btn {
 	text-transform: uppercase;
 	cursor: pointer;
-	background: #FFFFFF;
+	background: none;
 	border: none;
 	position: relative;
 
