--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -23,6 +23,7 @@ body {
 	font-family: 'Gotham Pro', sans-serif;
 	background: #ECF3FB;
 	height: 100%;
+	position: relative;
 	overflow-x: hidden;
 }
 
