--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -24,12 +24,13 @@ body {
 	background: #ECF3FB;
 	height: 100%;
 	position: relative;
-	overflow-x: hidden;
+	// overflow-x: hidden;
+
+	@media(max-width: $tablet) {
+		overflow-x: hidden;
+	}
 }
 
-body {
-	// overflow-x: hidden;
-}
 
 // =============
 .SectionMain__title {
